Test/exports/DatatypeExport.dfy.expect
DatatypeExport.dfy(41,24): Error: unresolved identifier: CT1
DatatypeExport.dfy(46,11): Error: member CT2 does not exist in type A.T
DatatypeExport.dfy(48,34): Error: member 'CT1?' has not been imported in this scope and cannot be accessed here
DatatypeExport.dfy(48,53): Error: member 'X' has not been imported in this scope and cannot be accessed here
DatatypeExport.dfy(56,24): Error: unresolved identifier: CT1
5 resolution/type errors detected in DatatypeExport.dfy
